Add images and flow diagram to README.md for Kuber Bank Conversation AI

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <button class="btn btn-outline-primary btn-lg">Learn More</button>
             </div>
             <div class="col-lg-6">
+                <img src="path/to/your/image.jpg" alt="Kuber Bank AI" class="img-fluid mb-4">
                 <div class="chat-container">
                     <iframe 
                         src="https://copilotstudio.microsoft.com/environments/Default-90a6102b-e79d-4186-9e42-c1f57d090757/bots/craa6_moneyKuberBankVirtualAssist/webchat?__version__=2" 
@@ -126,7 +127,7 @@
             <div class="col-md-4">
                 <div class="stats-card text-center">
                     <i class="fas fa-exchange-alt fa-3x mb-3"></i>
-                    <h3>₹10B+</h3>
+                    <h3>₹10B+</</h3>
                     <p>Transactions Processed</p>
                 </div>
             </div>
